SERVER-40052 Remove unnecessary invariant in BatchWriteOp invariant